fix(cli) fix welcome message spacing

--- a/app/assets/stylesheets/app/welcome_message.sass
+++ b/app/assets/stylesheets/app/welcome_message.sass
@@ -80,7 +80,7 @@
 
 @media only screen and (min-width: $screen-lg-min)
   .welcome-message
-    padding: 0 0 150px 0
+    padding: 80px 0 150px 0
     background-image: image_url('backgrounds/welcome_message/welcome_message_large.jpg')
     background-size: cover
     height: 675px
